--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 **/.DS_Store
-
+.expo/
 # Logs
 logs
 *.log
@@ -42,6 +42,7 @@ build/Release
 # Dependency directories
 node_modules/
 jspm_packages/
+
 
 # TypeScript v1 declaration files
 typings/
